--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+html{
+  scrollbar-color: rgba(255, 255, 255, 0.1) rgba(0, 0, 0, 0);
+  scrollbar-width: thin;
+}
 body {
   margin: 0px;
   background: #000000;
   font-family: "Roboto", sans-serif;
-  
 }
 .navarea{
   grid-area:nav;
@@ -17,18 +20,16 @@ body {
 .wrapper{
   display: grid;
   width: 100vw;
-  height: 100vh;
+  
   max-width: 100%;
   grid-template-areas:
     "nav"
     "content"
     "footer";
   grid-template-rows: 10% auto 15%;
-}
-.nav{
-  
   
 }
+
 .nav ul{
   list-style-type: none;
   display: flex;
@@ -41,14 +42,13 @@ body {
 .nav-left{
   display: flex;
   justify-content: space-between;
-  width: 25%;
+  width: 20%;
 }
 .nav-right{
     display: flex;
     justify-content: space-around;
     width: 15%;
     padding: 0% 3%;
-
 }
 
 a{
@@ -69,12 +69,12 @@ a:hover{
 }
 .main-content{
 color: white;
-padding: 5% 5%;
+padding: 15% 5%;
 display: flex;
 flex-direction: column;
 justify-content: flex-start;
 align-items: center;
-
+height: 70vh;
 }
 li{
   list-style: none;
@@ -130,4 +130,60 @@ color: rgb(255, 255, 255);
   color:white;
   font-weight: bold;
 }
+@media (max-width: 1200px) {
+.nav ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+.nav-left{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.nav-right{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    width: 100%;
+}
+.nav li{
+  background-color: black;
+  border-radius: 20px;
+  width: 100%;
+  margin: 1% 2%;
+}
+.nav button{
+  padding: 0% 2%;
+width: 100%;
+height: 100%;
+border-radius: 20px;
+border-style: none;
+background-color: #711de0;
+display: flex;
+}
 
+
+  .main-content ul{
+    display: flex;
+flex-direction: column;
+align-items: center;
+padding: 1% 2%;
+width: 100%;
+height:100%
+
+  }
+  .main-content ul li{
+    background: rgba(0, 0, 0, 0) linear-gradient(#711de0, #431185) repeat scroll 0% 0%;
+  border-radius: 16px;
+display: flex;
+justify-content: center;
+align-items: center;
+    width: 90%;
+height: 20%;
+margin: 1% 0%;
+  }
+}
